# phoenix-fs

./: .eslintignore  .eslintrc.json  .gitignore  .sonarcloud.properties  LICENSE-thirdParty  README.md  package-lock.json  package.json  renovate.json
.github/workflows/: build_verify.yml  codeql-analysis.yml  comment_pr.yml  npm-publish.yml  test-on-pr.yml  verify_cla_signature_pr.yml
example/: index.js
scripts/: run-with-server.sh
src/: constants.js  dep.js  errno.js  filerlib_copy.js  fslib.js  fslib_electron.js  fslib_filer.js  fslib_mounts.js  fslib_native.js  fslib_node_ws.js  fslib_tauri.js  fslib_watch.js  mount_point_storage.js  utils.js  virtualfs.js
src-build/: copy-debug-dist.js  copy-dist-to-test.js  copy-node-src-dist.js  copyFile.js  remove-postinstall.js
src-electron/: main-app-ipc.js  main-fs-ipc.js  main.js  package-lock.json  package.json  preload.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/node-src/: index.js  package-lock.json  package.json  phoenix-fs.js
src-tauri/src/: main.rs  platform.rs
test/: index-dist.html  index.html  test-copy-filer-fs-access.browser.js  test-copy.browser.js  test-dir.browser.js  test-file.browser.js  test-filer.browser.js  test-fs-access.browser.js  test-getPlatformPath-api.browser.js  test-node.browser.js  test-watcher.browser.js  test.array.js  test.browser.js  test.worker.js  testInit.js  worker-task.js
